

                CHANGES IN party VERSION 1.3-8 (2021-08-23)

    o    update reference output


                CHANGES IN party VERSION 1.3-7 (2021-03-03)

    o    suggest randomForest

                CHANGES IN party VERSION 1.3-6 (2021-02-08)

    o    fix LaTeX problem

    o    documentation updates

                CHANGES IN party VERSION 1.3-5 (2020-06-11)

    o    allow varperm to change in calls to R_get_nodeID (feature request by Dries Debeer)

                CHANGES IN party VERSION 1.3-4 (2020-03-05)

    o    /bin/sh is portable

                CHANGES IN party VERSION 1.3-3 (2019-03-04)

    o    make rchk happier

                CHANGES IN party VERSION 1.3-2 (2019-03-01)

    o    move ExpectCovar and ExpectCovarInfluence classes from coin to
         party


                CHANGES IN party VERSION 1.3-1 (2018-08-08)

    o    varimpAUC() now calls varImp::varImpAUC()


                CHANGES IN party VERSION 1.3-0 (2018-04-20)

    o    New scale argument for predict(<cforest>, scale = TRUE, ...).
         For simple regression forests, predicting
         the conditional mean by nearest neighbor weights with
         scale = TRUE is now
         equivalent to the aggregation of means. The unscaled version
         proposed in <doi:10.1002/sim.1593> can be obtained with
         scale = FALSE.}


                CHANGES IN party VERSION 1.2-4 (2017-12-13)

    o    Bonferroni sometimes overcorrected (by taking constant variables into account). 
         Spotted by Heidi Seibold.

    o    Bugfix for long-standing problem in conditional variable importances
         by Dries Debeer.


                CHANGES IN party VERSION 1.2-3 (2017-04-10)

    o    predict(<cforest>, OOB = TRUE) in party < 1.2-0 was _correct_
         and version 1.2-0 to 1.2-2 contained in incorrect "correction".
         The test set error and the out-of-bag error are now (again) 
         roughly equal. There won't be any correlation between 