@@ -3,12 +3,18 @@
 
 /* include R header files */
 
+#define USE_FC_LEN_T
 #include <R.h>
 #include <Rmath.h>
 #include <Rinternals.h>
 #include <Rdefines.h>
 #include <R_ext/Applic.h> /* for dgemm */
-#include <R_ext/Lapack.h> /* for dgesdd */
+#include <R_ext/BLAS.h> /* for dgesdd */
+/*
+#ifndef FCONE
+# define FCONE
+#endif
+*/
 
 /* include private header files: this need to be restricted */
 
