@@ -1,5 +1,10 @@
 
 
+                CHANGES IN party VERSION 1.3-9 (2021-09-27)
+
+    o    #define USE_FC_LEN_T as requested by CRAN 2021-09-25
+
+
                 CHANGES IN party VERSION 1.3-8 (2021-08-23)
 
     o    update reference output
@@ -9,23 +14,28 @@
 
     o    suggest randomForest
 
+
                 CHANGES IN party VERSION 1.3-6 (2021-02-08)
 
     o    fix LaTeX problem
 
     o    documentation updates
 
+
                 CHANGES IN party VERSION 1.3-5 (2020-06-11)
 
     o    allow varperm to change in calls to R_get_nodeID (feature request by Dries Debeer)
+
 
                 CHANGES IN party VERSION 1.3-4 (2020-03-05)
 
     o    /bin/sh is portable
 
+
                 CHANGES IN party VERSION 1.3-3 (2019-03-04)
 
     o    make rchk happier
+
 
                 CHANGES IN party VERSION 1.3-2 (2019-03-01)
 
